Require google-java-format